--- a/Practice/Practice.csproj
+++ b/Practice/Practice.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DataJuggler.Excelerate" Version="7.2.12" />
     <PackageReference Include="jQuery" Version="3.7.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
